--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,24 @@
-<h1>Mod 3 Resources</h1>
+<h1>Resourcefulness</h1>
 
 <h2>A site for current Turing Mod 3 students to catalog helpful articles and resources</h2>
+
+<section>
+  <%= form_for @resource do |f| %>
+    <%= f.label "Title" %>
+    <%= f.text_field :title %>
+
+    <%= f.label "Url" %>
+    <%= f.text_field :link %>
+
+    <%= f.label "Category" %>
+    <%= f.text_field :category %>
+
+    <%= f.label "Website Name" %>
+    <%= f.text_field :source %>
+
+    <%= f.label "Related Project (if applicable)" %>
+    <%= f.text_field :project %>
+
+    <%= f.submit "Submit Your Findings" %>
+  <% end %>
+</section>
