Add sad path for creating a resource

--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -5,6 +5,6 @@
   <p><%= resource.link %>
   <p><%= resource.source %>
   <p><%= resource.category %>
-  <p><% resource.project %>
+  <p><%= resource.project %>
 <% end %>
 </section>
