I can delete a resource

--- a/app/views/resources/_attributes.html.erb
+++ b/app/views/resources/_attributes.html.erb
@@ -1,5 +1,8 @@
-<p><%= resource.title %>
-<p><%= resource.link %>
-<p><%= resource.source %>
-<p><%= resource.category %>
-<p><%= resource.project %>
+<section id="resource-<%= resource.id %>">
+  <p><%= resource.title %>
+  <p><%= resource.link %>
+  <p><%= resource.source %>
+  <p><%= resource.category %>
+  <p><%= resource.project %>
+  <%= link_to 'Delete Resource', "/resources/#{resource.id}", method: :delete %>
+ </section>
