You can update a resource

--- a/app/views/resources/_attributes.html.erb
+++ b/app/views/resources/_attributes.html.erb
@@ -4,5 +4,6 @@
   <p><%= resource.source %>
   <p><%= resource.category %>
   <p><%= resource.project %>
+    <%= link_to 'Edit Resource', "/resources/#{resource.id}/edit", method: :get %>
   <%= link_to 'Delete Resource', "/resources/#{resource.id}", method: :delete %>
  </section>
