--- a/app/views/resources/_attributes.html.erb
+++ b/app/views/resources/_attributes.html.erb
@@ -1,9 +1,10 @@
 <section id="resource-<%= resource.id %>">
-  <p><%= resource.title %>
-  <p><%= resource.link %>
-  <p><%= resource.source %>
-  <p><%= resource.category %>
-  <p><%= resource.project %>
-    <%= link_to 'Edit Resource', "/resources/#{resource.id}/edit", method: :get %>
-  <%= link_to 'Delete Resource', "/resources/#{resource.id}", method: :delete %>
+  <p><b>Link:</b> <%= link_to "#{resource.title}", resource.link %>
+  <p><b>Website:</b> <%= resource.source %>
+  <p><b>Category:</b> <%= resource.category %>
+    <% if resource.project.empty? == false %>
+      <p><b>Related Project (if applicable):</b> <%= resource.project %>
+    <% end %>
+  <p><%= link_to 'Edit Resource', "/resources/#{resource.id}/edit", method: :get, class: 'btn btn-info btn-xs' %>
+  <%= link_to 'Delete Resource', "/resources/#{resource.id}", method: :delete, class: 'btn btn-info btn-xs' %>
  </section>
