--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -5,7 +5,16 @@
    <h3 class="text-info"><u>Project Related</u></h3>
    <br>
    <% project_related_category(@resources).each do |resource| %>
-   <%= render :partial => "attributes", :locals => { :resource => resource} %>
+   <section id="resource-<%= resource.id %>">
+     <p><b>Link:</b> <%= link_to "#{resource.title}", resource.link %>
+     <p><b>Website:</b> <%= resource.source %>
+     <p><b>Category:</b> <%= resource.category %>
+       <% if resource.project.empty? == false %>
+         <p><b>Related Project (if applicable):</b> <%= resource.project %>
+       <% end %>
+     <p><%= link_to 'Edit Resource', "/resources/#{resource.id}/edit", method: :get, class: 'btn btn-info btn-xs' %>
+     <%= link_to 'Delete Resource', "/resources/#{resource.id}", method: :delete, class: 'btn btn-info btn-xs' %>
+    </section>
    <% end %>
    <br>
  </section>
@@ -14,7 +23,16 @@
    <h3 class="text-info"><u>Official Documentation</u></h3>
    <br>
    <% official_docs_category(@resources).each do |resource| %>
-   <%= render :partial => "attributes", :locals => { :resource => resource} %>
+   <section id="resource-<%= resource.id %>">
+     <p><b>Link:</b> <%= link_to "#{resource.title}", resource.link %>
+     <p><b>Website:</b> <%= resource.source %>
+     <p><b>Category:</b> <%= resource.category %>
+       <% if resource.project.empty? == false %>
+         <p><b>Related Project (if applicable):</b> <%= resource.project %>
+       <% end %>
+     <p><%= link_to 'Edit Resource', "/resources/#{resource.id}/edit", method: :get, class: 'btn btn-info btn-xs' %>
+     <%= link_to 'Delete Resource', "/resources/#{resource.id}", method: :delete, class: 'btn btn-info btn-xs' %>
+    </section>
    <% end %>
    <br>
  </section>
@@ -23,7 +41,16 @@
    <h3 class="text-info"><u>Tools</u></h3>
    <br>
    <% tools_category(@resources).each do |resource| %>
-   <%= render :partial => "attributes", :locals => { :resource => resource} %>
+   <section id="resource-<%= resource.id %>">
+     <p><b>Link:</b> <%= link_to "#{resource.title}", resource.link %>
+     <p><b>Website:</b> <%= resource.source %>
+     <p><b>Category:</b> <%= resource.category %>
+       <% if resource.project.empty? == false %>
+         <p><b>Related Project (if applicable):</b> <%= resource.project %>
+       <% end %>
+     <p><%= link_to 'Edit Resource', "/resources/#{resource.id}/edit", method: :get, class: 'btn btn-info btn-xs' %>
+     <%= link_to 'Delete Resource', "/resources/#{resource.id}", method: :delete, class: 'btn btn-info btn-xs' %>
+    </section>
    <% end %>
    <br>
  </section>
@@ -32,7 +59,16 @@
    <h3 class="text-info"><u>Miscellaneous</u></h3>
    <br>
    <% misc_category(@resources).each do |resource| %>
-   <%= render :partial => "attributes", :locals => { :resource => resource} %>
+   <section id="resource-<%= resource.id %>">
+     <p><b>Link:</b> <%= link_to "#{resource.title}", resource.link %>
+     <p><b>Website:</b> <%= resource.source %>
+     <p><b>Category:</b> <%= resource.category %>
+       <% if resource.project.empty? == false %>
+         <p><b>Related Project (if applicable):</b> <%= resource.project %>
+       <% end %>
+     <p><%= link_to 'Edit Resource', "/resources/#{resource.id}/edit", method: :get, class: 'btn btn-info btn-xs' %>
+     <%= link_to 'Delete Resource', "/resources/#{resource.id}", method: :delete, class: 'btn btn-info btn-xs' %>
+    </section>
    <% end %>
    <br>
  </section>
@@ -41,7 +77,16 @@
    <h3 class="text-info"><u>Rails</u></h3>
    <br>
    <% rails_category(@resources).each do |resource| %>
-   <%= render :partial => "attributes", :locals => { :resource => resource} %>
+   <section id="resource-<%= resource.id %>">
+     <p><b>Link:</b> <%= link_to "#{resource.title}", resource.link %>
+     <p><b>Website:</b> <%= resource.source %>
+     <p><b>Category:</b> <%= resource.category %>
+       <% if resource.project.empty? == false %>
+         <p><b>Related Project (if applicable):</b> <%= resource.project %>
+       <% end %>
+     <p><%= link_to 'Edit Resource', "/resources/#{resource.id}/edit", method: :get, class: 'btn btn-info btn-xs' %>
+     <%= link_to 'Delete Resource', "/resources/#{resource.id}", method: :delete, class: 'btn btn-info btn-xs' %>
+    </section>
    <% end %>
    <br>
  </section>
@@ -50,7 +95,16 @@
    <h3 class="text-info"><u>Ruby</u></h3>
    <br>
    <% ruby_category(@resources).each do |resource| %>
-   <%= render :partial => "attributes", :locals => { :resource => resource} %>
+   <section id="resource-<%= resource.id %>">
+     <p><b>Link:</b> <%= link_to "#{resource.title}", resource.link %>
+     <p><b>Website:</b> <%= resource.source %>
+     <p><b>Category:</b> <%= resource.category %>
+       <% if resource.project.empty? == false %>
+         <p><b>Related Project (if applicable):</b> <%= resource.project %>
+       <% end %>
+     <p><%= link_to 'Edit Resource', "/resources/#{resource.id}/edit", method: :get, class: 'btn btn-info btn-xs' %>
+     <%= link_to 'Delete Resource', "/resources/#{resource.id}", method: :delete, class: 'btn btn-info btn-xs' %>
+    </section>
    <% end %>
    <br>
  </section>
@@ -59,7 +113,16 @@
    <h3 class="text-info"><u>APIs</u></h3>
    <br>
    <% apis_category(@resources).each do |resource| %>
-   <%= render :partial => "attributes", :locals => { :resource => resource} %>
+   <section id="resource-<%= resource.id %>">
+     <p><b>Link:</b> <%= link_to "#{resource.title}", resource.link %>
+     <p><b>Website:</b> <%= resource.source %>
+     <p><b>Category:</b> <%= resource.category %>
+       <% if resource.project.empty? == false %>
+         <p><b>Related Project (if applicable):</b> <%= resource.project %>
+       <% end %>
+     <p><%= link_to 'Edit Resource', "/resources/#{resource.id}/edit", method: :get, class: 'btn btn-info btn-xs' %>
+     <%= link_to 'Delete Resource', "/resources/#{resource.id}", method: :delete, class: 'btn btn-info btn-xs' %>
+    </section>
    <% end %>
    <br>
  </section>
@@ -68,7 +131,16 @@
    <h3 class="text-info"><u>ActiveRecord</u></h3>
    <br>
    <% active_record_category(@resources).each do |resource| %>
-   <%= render :partial => "attributes", :locals => { :resource => resource} %>
+   <section id="resource-<%= resource.id %>">
+     <p><b>Link:</b> <%= link_to "#{resource.title}", resource.link %>
+     <p><b>Website:</b> <%= resource.source %>
+     <p><b>Category:</b> <%= resource.category %>
+       <% if resource.project.empty? == false %>
+         <p><b>Related Project (if applicable):</b> <%= resource.project %>
+       <% end %>
+     <p><%= link_to 'Edit Resource', "/resources/#{resource.id}/edit", method: :get, class: 'btn btn-info btn-xs' %>
+     <%= link_to 'Delete Resource', "/resources/#{resource.id}", method: :delete, class: 'btn btn-info btn-xs' %>
+    </section>
    <% end %>
    <br>
  </section>
