--- a/app/views/resources/edit.html.erb
+++ b/app/views/resources/edit.html.erb
@@ -19,7 +19,7 @@
     <div class="form-group">
       <%= label_tag :category, "Category" %>
       <div class="width 100%">
-      <%= select_tag :category, raw("<option>Official Documentation</option><option>Project Related</option><option>Tools</option><option>Miscellaneous</option><option>Rails</option><option>Ruby</option><option>APIs</option><option>ActiveRecord</option>".html_safe), include_blank: true %>
+      <%= select_tag :category, raw("<option>Official Documentation</option><option>Project Related</option><option>Tools</option><option>Miscellaneous</option><option>Rails</option><option>Ruby</option><option>APIs</option><option>ActiveRecord</option><option>Testing</option>".html_safe), include_blank: true %>
       </div>
     </div>
 
